--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ email: liuzhuanghkust@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Amygdala!!!
 baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
+url: "https://septimo7.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: LIUZhuang2
 github_username: septimo7
 
 # Build settings
