--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,21 @@ theme: minima
 plugins:
   - jekyll-feed
 
+# Build settings
+# markdown: kramdown
+# mathjax: true
+# highlighter: rouge
+# excerpt_separator: <!--more-->
+# gems:
+#   - jekyll-feed
+# exclude:
+#   - Gemfile
+#   - Gemfile.lock
+# kramdown:
+#   input: GFM
+#   auto_ids: true
+#   syntax_highlighter: rouge
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
