--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Sherlock Holmes's drink
 email: liuzhuanghkust@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Amygdala!!!
-baseurl: "https://septimo7.github.io/" # the subpath of your site, e.g. /blog
-url: "https://septimo7.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: LIUZhuang2
 github_username: septimo7
 
