--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Sherlock Holmes's drink
 email: liuzhuanghkust@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Amygdala!!!
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: LIUZhuang2
 github_username: septimo7
