--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@ email: liuzhuanghkust@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Amygdala!!!
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://septimo7.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+# url: "https://septimo7.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: ""
 twitter_username: LIUZhuang2
 github_username: septimo7
 
