--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,13 @@ mathjax: true
 theme: minima
 plugins:
   - jekyll-feed
+  # - jekyll-gist
+
+# Minima date format
+# refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
+minima:
+  date_format: "%b %-d, %Y"
+
 
 # Build settings
 # markdown: kramdown
