--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Sherlock Holmes's drink
-email: liuzhuanghkust@gmail.com
+title: Amygdala!!!
+email: liuzhuanghkust AT gmail DOT com
 description: >- # this means to ignore newlines until "baseurl:"
   Amygdala!!!
 baseurl: "/" # the subpath of your site, e.g. /blog
@@ -36,6 +36,8 @@ plugins:
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
 minima:
   date_format: "%b %-d, %Y"
+
+show_excerpts: enabled
 
 excerpt_separator: <!--more-->
 
